--- a/views/searchTwx.ejs
+++ b/views/searchTwx.ejs
@@ -33,7 +33,7 @@
     <% if(typeof matchedObjectNames!= 'undefined') {  %>
       <table class="striped">
         <tr >
-           <th>Artifact Name </th><th>Artifact Type</th><th colspan="2">Location</th>
+           <th>Artifact Name </th><th>Artifact Type</th><th colspan="2">Location:Matched Term: Line Number</th>
         </tr>
      
         <% for (var i = 0; i < matchedObjectNames.length; i++) { %>
